[package]
name = "tiger-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1.6.0"
logos = "0.12.1"
lazy_static = "1.4.0"
lalrpop = { version = "0.19.8", default-features = false }
lalrpop-util ="0.19.8"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"

[build-dependencies]
lalrpop = { version = "0.19.8", default-features = false }